# spectrIDA-Reverse_Engineering_Stack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: plan-naming-typing-quality.md
scripts/: upload_gguf.py
spectrida/: api.py  cli.py  config.py  onboard.py  voice.py
spectrida/analysis/: parallel_analyze.py
spectrida/core/: audit.py  backend.py  canon.py  demo.py  globals.py  glossary.py  ida.py  llamacpp.py  namecache.py  ollama.py  pipeline.py  services.py  structs.py  types.py
spectrida/tui/: styles.tcss
spectrida/tui/screens/: browser.py  dialogs.py
spectrida/tui/widgets/: funclist.py  statusbar.py
tests/: test_audit.py  test_canon.py  test_confidence.py  test_config.py  test_core.py  test_globals.py  test_glossary.py  test_localtypes.py  test_namecache.py  test_propagation.py  test_structs.py  test_types.py  test_typing.py
