[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrida"
version = "0.1.0"
description = "Ghost through binaries — parallel IDA analysis + AI function naming in your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ggfuchsi-oss" }]
keywords = ["ida", "ida-pro", "reverse-engineering", "binary-analysis", "llm", "ai", "tui", "decompiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "textual>=0.80",
    "anthropic>=0.69",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
gpu = ["torch>=2.0", "numpy>=1.24"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
spectrida = "spectrida.cli:main"

[project.urls]
Homepage = "https://github.com/ggfuchsi-oss/spectrIDA"
Repository = "https://github.com/ggfuchsi-oss/spectrIDA"
Issues = "https://github.com/ggfuchsi-oss/spectrIDA/issues"

[tool.hatch.build.targets.wheel]
packages = ["spectrida"]

[tool.ruff]
line-length = 100
target-version = "py310"
# the bundled analysis pipeline is vendored subprocess code (idapro must import
# after sys.path setup, etc.) — not linted.
extend-exclude = ["spectrida/analysis"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E701", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
